@@ -6,6 +6,7 @@ v0.9.3
 * [BGBUILD-241] Add Scientific Linux support
 * [BGBUILD-220] Group names have spaces (to the user), this breaks schema rules for packages
 * [BGBUILD-222] Allow overwrite of uploaded ec2 image
+* [BGBUILD-225] Move PAE configuration parameter to operating system configuration
 
 v0.9.2
 
